# codedx-cli-client

./: .travis.yml  Cargo.toml  Jenkinsfile  LICENSE  appveyor.yml  readme.md
.bsp/: sbt.json
ci/: before_deploy.ps1  before_deploy.sh
src/: branching.rs  client.rs  commands.rs  config.rs  main.rs  repl.rs
