[package]
name = "codedx-client"
version = "0.3.0"
authors = ["Dylan Halperin <dylan.halperin@synopsys.com>"]
edition = "2021"

[dependencies]
clap = "2.26.2"
colored = "1.5.3"
hyper = "0.11"
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "native-tls"] }
rpassword = "2.0.0"

[dependencies.nom]
version = "3.2"
features = ["verbose-errors"]