[package]
name = "codedx-client"
version = "0.3.0"
authors = ["Dylan Halperin <dylan.halperin@synopsys.com>"]
edition = "2021"

[dependencies]
clap = "2.26.2"
colored = "1.5.3"
hyper = "0.14"
rpassword = "2.0.0" # 7.1
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# for reqwest, using native-tls-vendored to make sure that when openssl is used for Linux builds
# that we build our own copy to statically link in rather than depending on what's installed in the
# build VM
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "native-tls-vendored"] }

[dependencies.nom]
version = "3.2"
features = ["verbose-errors"]