[package]
name = "codedx-client"
version = "0.3.0"
authors = ["Dylan Halperin <dylan.halperin@synopsys.com>"]
edition = "2021"

[dependencies]
clap = "2.34" # version 3/4 require changes
nom = "6.2" # nom 7.0+ remove the macro compatibility layer
rpassword = "7.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# for reqwest, using native-tls-vendored to make sure that when openssl is used for Linux builds
# that we build our own copy to statically link in rather than depending on what's installed in the
# build VM
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "native-tls-vendored"] }
